<resources>
    <string name="app_name">HumYum</string>
    <string name="slogn">No matter where you are, whether you are at home, or in the office, or on the beach, we will find you and feed you.</string>
    <string name="signup">Signup</string>
    <string name="signin">Sign In</string>
    <string name="phone_num_edittext_hint">Phone Number</string>
    <string name="password_edittext_hint">Password</string>
    <string name="progressbar_message">Please wait....</string>
</resources>
